# autoheal-devops-agent

./: .dockerignore  .env.example  .gitignore  .trivyignore  Makefile  README.md  ai_diagnosis.json  ai_diagnosis_report.md  bandit-results.sarif  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json  vulnerable.py
.github/workflows/: ai-failure-analyzer.yml  ai-pr-review.yml  ci.yml  security-scan.yml
ai_engine/: client.py  exceptions.py
ai_engine/models/: failure.py  responses.py  review.py
ai_engine/parsers/: schemas.py
ai_engine/prompts/: templates.py
ai_engine/utils/: sanitizer.py
app/: config.py  main.py
app/models/: responses.py
app/services/: github_service.py  monitoring_service.py  reports_service.py  test_security_issue.py
docker/: Dockerfile
docs/: AutoHeal_DevOps_Agent_Master_Prompt.md  api-guide.md  architecture.md  deployment-guide.md  interview-qa.md  master-handbook.md  resume-project-description.md  troubleshooting.md
docs/diagrams/: cicd_lifecycle.md  observability_flow.md  security_pipeline.md  system_architecture.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: sidebar.tsx
frontend/lib/: api.ts
frontend/types/: analysis.ts  api.ts  github.ts  security.ts
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
prompts/: code_review.j2  failure_diagnosis.j2  security_review.j2
reports/: .gitkeep
reports/latest/: bandit-results.sarif  (+3 more)
scripts/: analyze_failure.py  capture_logs.py  review_pr.py
(+22 files in other folders)
