[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoheal-devops-agent"
version = "0.1.0"
description = "An AI-powered self-healing CI/CD pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-genai>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "prometheus-client>=0.21.0",
    "python-json-logger>=2.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", "__pycache__", "venv", ".venv", ".pytest_cache", ".ruff_cache"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
